src/test/test-models/bad/reserved/and_eq.stan
data {
  real and_eq;
}
model {
}
